# sogogata1

./: CMakeLists.txt  readme.txt
pico_1bit_dac_v2/: CMakeLists.txt  audio_state.h  bsp.c  bsp.h  dsp.c  dsp.h  i2s_rx.c  i2s_rx.h  i2s_rx.pio  main.c  pdm_output.c  pdm_output.h  pdm_output.pio  pins.c  pins.h  pio_pwm_4bit.pio  pio_pwm_5bit.pio  pio_pwm_6bit.pio  simple_queue.c  simple_queue.h  usb_audio.c  usb_audio.h
pico_1bit_dac_v2/uf2/: pico_1bit_dac.uf2  pico_1bit_dac_4844.uf2  pico_1bit_dac_HR.uf2  pico_1bit_dac_HR2.uf2  pico_1bit_dac_HR2_4bitPWM_3rdDS.uf2  pico_1bit_dac_HR2_5bitPWM_3rdDS.uf2  pico_1bit_dac_HR2_5bitPWM_4thDS.uf2  pico_1bit_dac_HR2_6bitPWM_3rdDS.uf2  pico_1bit_dac_HR2_6bitPWM_4thDS.uf2  pico_1bit_dac_NR.uf2  pico_1bit_dac_v2_usb_i2s_trial.uf2
